--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ spring:
     url: jdbc:mysql://localhost:3306/smile?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=true
     username: root
     password: 331506
+  redis:
+    host: 127.0.0.1
+    port: 6379
 mybatis-plus:
   global-config:
     db-config:
